<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etNombrePunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_point_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etLatitud"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latitude"
            android:inputType="numberDecimal|numberSigned"/>

        <EditText
            android:id="@+id/etLongitud"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_longitude"
            android:inputType="numberDecimal|numberSigned"/>
    </LinearLayout>
</LinearLayout>